--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "consolidate": "0.10.0",
     "ejs": "0.8.5",
     "coffee-script": "1.6.3",
-    "express": "3.4.7"
+    "express": "3.4.7",
+    "formidable": "1.0.14"
   },
   "devDependencies": {
     "mimosa-coffeescript": "*",
